--- a/assets/locales/es.json
+++ b/assets/locales/es.json
@@ -398,6 +398,8 @@
     "placeholders": {}
   },
   "cancel": "Cancelar",
+  "teachingPrayer": "Enseñanza de la oración",
+  "noData": "No hay datos para @x",
   "@cancel": {
     "type": "text",
     "placeholders": {}
@@ -574,6 +576,16 @@
   },
   "noNotifications": "No hay notificaciones",
   "@noNotifications": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "liatafaqahuu": "comprendan",
+  "@liatafaqahuu": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "understanding": "para estudiar la religión",
+  "@understanding": {
     "type": "text",
     "placeholders": {}
   }
