--- a/assets/locales/id.json
+++ b/assets/locales/id.json
@@ -11,7 +11,7 @@
     "type": "text",
     "placeholders": {}
   },
-  "lang": "Bahasa Indonesia",
+  "lang": "Indonesian",
   "@lang": {
     "description": "lang",
     "type": "text",
@@ -398,6 +398,8 @@
     "placeholders": {}
   },
   "cancel": "Batal",
+  "teachingPrayer": "Pengajaran Shalat",
+  "noData": "Tidak ada data untuk @x",
   "@cancel": {
     "type": "text",
     "placeholders": {}
@@ -574,6 +576,16 @@
   },
   "noNotifications": "Tidak ada notifikasi",
   "@noNotifications": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "liatafaqahuu": "mendalami",
+  "@liatafaqahuu": {
+    "type": "text",
+    "placeholders": {}
+  },
+  "understanding": "untuk memperdalam pengetahuan mereka tentang agama",
+  "@understanding": {
     "type": "text",
     "placeholders": {}
   }
